--- a/WordStream.html
+++ b/WordStream.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html= "en">
+<html lang= "en">
 <head>
 	<meta charset="UTF-8">
 	<title>WordStream</title>
@@ -65,22 +65,27 @@
 	<!-- DIV FOR MAIN CONTENT OF PAGE -->
 	<div class="main">
 		<div class="content">
-			<h2>PPC - Achieve More Efficient Pay-Per Click(PPC) Marketing</h2>
-			<p>PPC (pay-per click) search marketing software offers a means for accomplishing two core requirements for PPC optimization:</p>
+			<h3 class="blue">PPC< - Achieve More Efficient Pay-Per Click(PPC) Marketing</h3>
+			<p><strong>PPC</strong> (<a href="#">pay-per click</a>) search marketing software offers a means for accomplishing two core requirements for PPC optimization:</p>
 			<ul>
-				<li>PPC Automation - While it would be impossible (and inadvisable!) to automate every aspect of pay-per-click advertising, automating away redundant, time-consuming tasks affords you a means of increasing productivity. Often, this means being able ot produce an amount of work that would otherwise have been unachievable for you and your business.</li>
-				<li>PPC Management - PPC management refers to the maintenance and prioritization of paid search marketing tasks. Being able to oversee various aspects of your account while assigning each item on a seemingly endless to-do list an appropriate value can make or break an online ad campaign.</li>
+				<li><strong>PPC Automation</strong> - While it would be impossible (and inadvisable!) to automate every aspect of <a href="#">pay-per-click advertising</a>, automating away redundant, time-consuming tasks affords you a means of increasing productivity. Often, this means being able ot produce an amount of work that would otherwise have been unachievable for you and your business.</li>
+				<li><strong>PPC Management</strong> - <a href="#">PPC management</a> refers to the maintenance and prioritization of <a href="#">paid search</a> marketing tasks. Being able to oversee various aspects of your account while assigning each item on a seemingly endless to-do list an appropriate value can make or break an <a href="#">online ad campaign</a>.</li>
 			</ul>
-			<p>WordStream's PPC software is specifically designed to aid in these two PPC search engine marketing areas. This page will show you both the processes the software is automating for you, and the best course of action to take where workflow is concerned</p>
+			<p>WordStream's <a href="#">PPC software </a>is specifically designed to aid in these two <a href="#">PPC search engine</a> marketing areas. This page will show you both the processes the software is automating for you, and the best course of action to take where workflow is concerned</p>
 		</div>
 		<div class="start">
-			<h2>Drive More Profits Through PPC- Try Our Platform FREE</h2>
-			<p>Get instant access to WordStream's innovative Quality Score and Account Management tools through our FREE 7-day Trial. Risk Free, No Credit Card Required and No Automatic Sign-ups</p>
-			<button>Get Started Today!</button>
+			<div class="hand">
+				<img src = "content_ad.png" alt = "a pic of hand">
+			</div>
+			<div class="descrip">
+				<h2 class="blue">Drive More Profits Through PPC- Try Our Platform FREE</h2>
+				<p>Get instant access to WordStream's innovative <strong>Quality Score</strong> and <strong>Account Management</strong> tools through our <strong>FREE 7-day Trial</strong>. Risk Free, No Credit Card Required and No Automatic Sign-ups</p>
+				<button>Get Started Today!</button>
+			</div>
 		</div>
 		<div class="end">
-			<h4>Automation And Your PPC Search Campaign</h4>
-			<p>Creating an effective AdWords campaign for search requires a mass of time and effort. WordStream is built to help productize pay-per-click campaign labor while recognizing that only certain tasks should be automated for you. Rather than being a</p>
+			<h4 class="blue">Automation And Your PPC Search Campaign</h4>
+			<p>Creating an effective <a href="#">AdWords campaign</a> for search requires a mass of time and effort. WordStream is built to help productize <a href="#">pay-per-click</a> campaign labor while recognizing that only certain tasks should be automated for you. Rather than being a</p>
 		</div>
 	</div>
 	<!-- DIV FOR MAIN CONTENT OF PAGE -->
